major changes to main menu button interacvity. started scene two

--- a/FleetAcademy.html
+++ b/FleetAcademy.html
@@ -9,6 +9,7 @@
   <body>
       <script src="//cdn.jsdelivr.net/npm/phaser@3.52.0/dist/phaser.min.js"></script>
       <script src='StartScene.js'></script>
+      <script src='SecondScene.js'></script>
       <script src='TestScene.js'></script>
       <script src="config.js"></script>
   </body>
